# suncatcher

./: .gitignore  README.md  info_product.json  pyproject.toml  suncatcher.db
suncatcher/: backup.py  db.py  patch1.py  sunbot.py  suncatcher.db  user.py  user_file.json  user_file1.json  vksunbot.py
suncatcher/admin_file/: catalog_suns.json
