[tool.poetry]
name = "suncatcher"
version = "1.0.0"
description = ""
authors = ["kotbarmaglot <allonewage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pytelegrambotapi = "^4.11.0"
vk = "^3.0"

[tool.poetry.scripts]
sunbot = "suncatcher.sunbot:main"
vksunbot = "suncatcher.vksunbot:main"
db = "suncatcher.db:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
